<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cerebro6"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cerebro6"
        android:padding="10dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/ivImagem"
            android:layout_width="fill_parent"
            android:layout_height="304dp"
            android:layout_marginTop="8dp"
            android:background="@color/cardview_shadow_end_color"
            android:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloMain"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <Button
            android:id="@+id/btnImage"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:text="@string/buscar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivImagem" />

        <Button
            android:id="@+id/falaMain"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:text="@string/salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:inputType="textMultiLine|textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnImage" />

        <TextView
            android:id="@+id/tituloMain"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/cardview_light_background"
            android:gravity="center"
            android:text="@string/tituloFotos"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLimpar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/limpar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/falaMain" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/duvidaMain"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/interrogacao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLimpar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>