<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true"
    >



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context=".Falador">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/duvidaFalador"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="304dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/interrogacao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limpaTexto" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tituloTelaFalador"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/falador"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:text="@string/btFalar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/praFalar" />

    <EditText
        android:id="@+id/praFalar"
        android:layout_width="fill_parent"
        android:layout_height="358dp"
        android:layout_marginTop="64dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/limpaTexto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/limpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/falador" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
